--- a/indexstyle.css
+++ b/indexstyle.css
@@ -48,7 +48,7 @@ html {
     position: relative;
     text-decoration: none;
     font-weight: bold;
-    font-size: x-large;
+    font-size: 22px;
     padding-right: 40px;
     display: inline;
     color: darkslategray;
